@@ -17,10 +17,15 @@ AC_SUBST(GLIMMER_MINOR_VERSION)
 AC_SUBST(GLIMMER_VERSION)
 
 AC_PROG_RANLIB
+
+# save compiler flags, autoconf will change them later
+glimmer_FCFLAGS=$FCFLAGS
 AC_PROG_FC
+FCFLAGS=$glimmer_FCFLAGS
 AC_LANG_PUSH(Fortran)
 AC_FC_SRCEXT(f90)
 FCFLAGS="$FCFLAGS -fpp"
+
 dnl Checking for python
 AM_PATH_PYTHON([2.3],,[AC_MSG_RESULT(need at least python 2.3)])
 
@@ -80,7 +85,19 @@ AC_ARG_ENABLE(profile, AS_HELP_STRING([--enable-profile],[Turn on profiling]),
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-profile) ;;
 esac],[AC_MSG_RESULT([no])])
 
+# should we run the tests
+AC_MSG_CHECKING([whether we should run the tests])
+AC_ARG_ENABLE(tests, AS_HELP_STRING([--enable-tests],[Run short tests]),
+[case "${enableval}" in
+ yes)  AC_MSG_RESULT([yes]);;	
+ no)   AC_MSG_RESULT([no]);;
+ *) AC_MSG_ERROR(bad value ${enableval} for --enable-tests) ;;
+esac],[AC_MSG_RESULT([no])])
+AM_CONDITIONAL([RUN_TESTS], [test "$enable_tests" == "yes"])
+
+
 AC_CONFIG_FILES([Makefile src/Makefile src/python/Makefile src/fortran/Makefile src/fortran/SLAP_library/Makefile \
 		doc/Makefile doc/common/Makefile doc/dg/Makefile doc/dg/figures/Makefile \
-		doc/ug/Makefile doc/ug/figs/Makefile doc/num/Makefile doc/num/figs/Makefile doc/num/gnu/Makefile])
+		doc/ug/Makefile doc/ug/figs/Makefile doc/num/Makefile doc/num/figs/Makefile doc/num/gnu/Makefile \
+		tests/Makefile])
 AC_OUTPUT([glimmer-config src/fortran/glimmer_version.f90 doc/common/version.tex])
