@@ -34,7 +34,9 @@ def usage():
     print ''
     print 'options'
     print '--help\tthis message'
+    print '-r NAME --results=NAME\tname of file where timing info is stored'
     print '--prefix PFX\tGLIMMER prefix'
+    print '--src\tassume prefix is source directory'
 
 def get_runtype(config):
     """Determine which model to run given configuration.
@@ -60,10 +62,34 @@ def get_runtype(config):
             raise KeyError, 'no idea what model I should start'
     return model
 
+def get_lock(f):
+    """Wait until we get lock for file f."""
+
+    got_lock = False
+    while not got_lock:
+        try:
+            fcntl.lockf(f,(fcntl.LOCK_EX|fcntl.LOCK_NB))
+        except IOError:
+            got_lock=False
+            time.sleep(1)
+        else:
+            got_lock=True
+
+def release_lock(f):
+    """Release lock for file f."""
+
+    fcntl.lockf(f,fcntl.LOCK_UN)
+
+def get_gmtdate():
+    """Get current date."""
+
+    d = time.gmtime()
+    return '%d-%d-%d_%d:%d'%(d[0],d[1],d[2],d[3],d[4])
+
 if __name__ == '__main__':
 
     try:
-        opts, args = getopt.getopt(sys.argv[1:],'h',['help','prefix='])
+        opts, args = getopt.getopt(sys.argv[1:],'hr:',['help','prefix=','results=','src'])
     except getopt.GetoptError,error:
         # print usage and exit
         print error
@@ -77,12 +103,18 @@ if __name__ == '__main__':
         sys.exit(1)        
 
     prefix=None
+    is_src = False
+    results_name = 'results'
     for o,a in opts:
         if o in ('-h', '--help'):
             usage()
             sys.exit(0)
+        if o in ('-r', '--results'):
+            results_name = a
         if o == '--prefix':
-            prefix=os.path.join(a,'bin')
+            prefix=a
+        if o == '--src':
+            is_src = True
 
 
     config = ConfigParser.ConfigParser()
@@ -90,30 +122,54 @@ if __name__ == '__main__':
 
     model = get_runtype(config)
     if prefix!=None:
-        model = os.path.join(prefix,model)
+        if is_src:
+            model = os.path.join(prefix,'src','fortran',model)
+        else:
+            model = os.path.join(prefix,'bin',model)
 
+    # open results file
+    if os.path.exists(results_name):
+        status = open(results_name,'a')
+    else:
+        status = open(results_name,'a')
+        get_lock(status)
+        status.write('#cfg_file\tusr_time\tsys_time\tdate\t\tversion\tfcflags\n')
+        release_lock(status)
+        
     prog = os.popen(model,'w')
     prog.write(configname)
     prog.close()
 
     t = os.times()
 
-    # get lock
-    status = open('results','a')
-    got_lock = False
-    while not got_lock:
-        try:
-            fcntl.lockf(status,(fcntl.LOCK_EX|fcntl.LOCK_NB))
-        except IOError:
-            got_lock=False
-            time.sleep(1)
+    # extract some info
+    if prefix!=None:
+        if is_src:
+            glimmer_cfg = 'sh %s'%os.path.join(prefix,'glimmer-config')
         else:
-            got_lock=True
+            glimmer_cfg = os.path.join(prefix,'bin','glimmer-config')
+    else:
+        glimmer_cfg = 'glimmer-config'
+    prog = os.popen('%s --version'%glimmer_cfg)
+    version = prog.readline().strip()
+    prog.close()
+    prog = os.popen('%s --fcflags'%glimmer_cfg)
+    data = prog.readline()
+    prog.close()
+    fcflags=''
+    for f in data.split():
+        interesting = True
+        for i in ('-I','-fpp'):
+            if f.startswith(i):
+                interesting = False
+        if interesting:
+            fcflags='%s %s'%(fcflags,f)
+    fcflags='\"%s\"'%fcflags.strip()
+    
+    # get lock
+    get_lock(status)
+    status.write('%s\t%f\t%f\t%s\t%s\t%s\n'%(configname,t[2],t[3],get_gmtdate(),version,fcflags))
 
-    status.write('%s\t%f\t%f\n'%(configname,t[2],t[3]))
-
-    fcntl.lockf(status,fcntl.LOCK_UN)
+    # release lock
+    release_lock(status)
     status.close()
-
-
-
